// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDayFromWestern() should return the correct object for day in leap month 1`] = `
Object {
  "day": 4,
  "isDoubledDay": false,
  "isLeapDay": false,
  "isPreviousSkipped": false,
  "month": Object {
    "isDoubledMonth": true,
    "isLeapMonth": true,
    "month": 8,
  },
  "skippedDay": false,
  "westernDate": 2013-09-09T10:00:00.000Z,
  "year": 2140,
}
`;

exports[`getDayFromWestern() should return the correct object for day in main doubled month 1`] = `
Object {
  "day": 4,
  "isDoubledDay": false,
  "isLeapDay": false,
  "isPreviousSkipped": false,
  "month": Object {
    "isDoubledMonth": true,
    "isLeapMonth": false,
    "month": 8,
  },
  "skippedDay": false,
  "westernDate": 2013-10-08T10:00:00.000Z,
  "year": 2140,
}
`;

exports[`getDayFromWestern() should return the correct object for leap day 1`] = `
Object {
  "day": 8,
  "isDoubledDay": true,
  "isLeapDay": true,
  "isPreviousSkipped": false,
  "month": Object {
    "isDoubledMonth": false,
    "isLeapMonth": false,
    "month": 2,
  },
  "skippedDay": false,
  "westernDate": 2013-03-19T10:00:00.000Z,
  "year": 2140,
}
`;

exports[`getDayFromWestern() should return the correct object for main duplicate day 1`] = `
Object {
  "day": 8,
  "isDoubledDay": true,
  "isLeapDay": false,
  "isPreviousSkipped": false,
  "month": Object {
    "isDoubledMonth": false,
    "isLeapMonth": false,
    "month": 2,
  },
  "skippedDay": false,
  "westernDate": 2013-03-20T10:00:00.000Z,
  "year": 2140,
}
`;
